dark mode fixed

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -8,6 +8,8 @@
   font-size: $h3;
   font-weight: $header-font-weight;
   background-image: none;
+  border-bottom: none;
+  padding-bottom: 0;
 }
 
 .site-header .site-title {
@@ -20,6 +22,7 @@
 
 .site-header nav a {
   color: $nav-color;
+  border-bottom: none;
 }
 
 .site-header nav a:hover,
