--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -1,27 +1,17 @@
 a {
   color: $link-color;
-  background-image: linear-gradient(to top,
-    rgba(0,0,0,0) 13%,
-    rgba($link-color,.8) 13%,
-    rgba($link-color,.8) 18%,
-    rgba(0,0,0,0) 17%
-  );
-  text-shadow: $base-bg-color 1px 0px 0px, $base-bg-color -1px 0px 0px;
+  text-decoration: none;
+  border-bottom: 1px solid $link-color;
+  padding-bottom: 1px;
+  transition: border-color 0.2s ease, color 0.2s ease;
 }
 
 a:hover,
 a:focus,
 a:active {
-  border: 0;
   color: $link-hover-color;
+  border-bottom-color: $link-hover-color;
   text-decoration: none;
-  background-image: linear-gradient(to top,
-    rgba(0,0,0,0) 13%,
-    rgba($link-hover-color,.8) 13%,
-    rgba($link-hover-color,.8) 17%,
-    rgba(0,0,0,0) 17%
-  );
-  text-shadow: $base-bg-color 1px 0px 0px, $base-bg-color -1px 0px 0px;
 }
 
 // Correct issues with buttons
@@ -42,6 +32,8 @@ button,
 .anchorjs-link {
     text-shadow: none;
     background-image: none;
+    border-bottom: none !important;
+    padding-bottom: 0;
 }
 .anchorjs-link:hover,
 .anchorjs-link:focus,
@@ -50,4 +42,11 @@ button,
     color: $link-hover-color;
     text-shadow: none;
     background-image: none;
+}
+
+// Share buttons
+.share-page a,
+.share-links a {
+    border-bottom: none !important;
+    padding-bottom: 0;
 }
