--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -13,6 +13,7 @@
   cursor: pointer;
   opacity: 0.8;
   padding: 0.2em;
+  border-bottom: none;
 }
 
 .social-icons a.fa:hover {
